--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "protal-dev": "pnpm --filter web-portal dev",
+    "login-dev": "pnpm --filter web-login dev",
+    "dev": "pnpm protal-dev&&pnpm login-dev"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +20,6 @@
   },
   "dependencies": {
     "vue": "^3.5.17"
-  }
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
