--- a/apps/mock-server/package.json
+++ b/apps/mock-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev1": "ts-node-dev --respawn src/index.ts",
     "build": "tsc"
   },
   "dependencies": {
