--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@lay/component",
+    "name": "@laytemp/component",
     "version": "0.0.1",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
